Refactor Spline, allow for different implementations.